--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongodb": "^5.2.0"
+    "mongodb": "^5.2.0",
+    "stripe": "^12.0.0"
   }
 }
